oxiplate-derive/tests/broken/if/unclosed-if.stderr
error: "if" statement is never closed (unexpected end of template)
 --> tests/broken/if/unclosed-if.rs:4:51
  |
4 | #[oxiplate_inline("{%- if should_do -%}{{ action }}")]
  |                                                   ^
